@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>

' Tabela: User
Table(User, "User") {
    + ID: INT [PK]
    + nickname: TEXT
    + name: TEXT
    + surname: TEXT
    + creation_timestamp : Date
    + total_rented: INT
    + points: INT
}

Table(Book, "Book") {
    + ID: INT [PK]
    + title: TEXT
    + author: TEXT
    + publish_date: DATE
    + borrow_count: INT
}

Table(book_rental, "book_rental") {
    + ID: INT [PK]
    + user_id: INT [FK]
    + book_id: INT [FK]
    + rent_timestamp: DATE
    + deadline: DATE
}

' Relacje
User "1" -- "0..*" book_rental : "user_id"
Book "1" -- "0..*" book_rental : "book_id"
@enduml